--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <h3 class="card-title">More about Me</h3>
                 <p class="card-text">I am proficient in C and Python, relational and non-relational databases, and source control. Primarily, I have setup data pipelines using PostgreSQL, 
                     SQLite, and MongoDB with Python SQLAlchemy and the Flask framework. I enjoy working with the Python library, Beautiful Soup, for HTML extraction and Splinter for automating browsers.
-                    I have experience interacting with APIs for gathering weather data as well as creating Google Map interactions. For visualizations, I can write in JS and use D3 + Leaflet, and have spent time making dashboard and stories in Tableau. For BigData, I can perform ETL methods with pandas and PySpark.</p>
+                    I have experience interacting with APIs for gathering weather data as well as creating Google Map interactions. For visualizations, I can write in JS and use D3 + Leaflet, and have spent time making dashboards and stories in Tableau. For BigData, I can perform ETL methods with pandas and PySpark.</p>
                 <h5 class="card-title">
                     Technologies I use:
                 </h5>
