--- a/index.html
+++ b/index.html
@@ -124,14 +124,18 @@
                 </span>
 
                 <h3 class="card-title">More about Me</h3>
-                <p class="card-text">I am proficient in C and Python, relational and non-relational databases, and source control. Primarily, I have setup data pipelines using PostgreSQL, 
-                    SQLite, and MongoDB with Python SQLAlchemy and the Flask framework. I enjoy working with the Python library, Beautiful Soup, for HTML extraction and Splinter for automating browsers.
-                    I have experience interacting with APIs for gathering weather data as well as creating Google Map interactions. For visualizations, I can write in JS and use D3 + Leaflet, and have spent time making dashboards and stories in Tableau. For BigData, I can perform ETL methods with pandas and PySpark.</p>
+                <p class="card-text">
+                    Final Project Link:
+                    <a href = "https://derekhuggens.github.io/Final-Project/">Final Project</a><br>
+                    I am proficient in C and Python, relational and non-relational databases, and source control. Primarily, I have setup data pipelines using PostgreSQL, 
+                    SQLite, and MongoDB with Python SQLAlchemy/psycopg2, Flask, and Node/Express. I enjoy working with the Python library, Beautiful Soup, for HTML extraction and Splinter for automating browsers.
+                    I have experience interacting with APIs for gathering weather data as well as creating Google Map interactions. For visualizations, I can use JS/D3/Leaflet, matplotlib/seaborn and have spent time making dashboards and stories in Tableau.
+                    For BigData, I can perform ETL methods with pandas and PySpark. Finally, I have experience with supervised/unsupervised ML using varying algorithms and ensemble learning techniques with Tensorflow/Keras.</p>
                 <h5 class="card-title">
                     Technologies I use:
                 </h5>
                 <p class="card-text">
-                    Visual Studio/Code, JupyterLab/Notebook, Anaconda, GitBash, PostgreSQL, MongoDB Compass
+                    Visual Studio/Code, JupyterLab/Notebook, GitBash, PostgreSQL, R-Studio, Alteryx, PowerBI, Docker
                 </p>
             </div>
         </div>
