--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <h3 class="card-title">More about Me</h3>
                 <p class="card-text">
                     Final Project Link:
-                    <a href = "https://derekhuggens.github.io/Final-Project/">Final Project</a><br>
+                    <a href = "https://derekhuggens.github.io/Final-Project/">Final Project</a><br><br>
                     I am proficient in C and Python, relational and non-relational databases, and source control. Primarily, I have setup data pipelines using PostgreSQL, 
                     SQLite, and MongoDB with Python SQLAlchemy/psycopg2, Flask, and Node/Express. I enjoy working with the Python library, Beautiful Soup, for HTML extraction and Splinter for automating browsers.
                     I have experience interacting with APIs for gathering weather data as well as creating Google Map interactions. For visualizations, I can use JS/D3/Leaflet, matplotlib/seaborn and have spent time making dashboards and stories in Tableau.
