--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <h3 class="card-title">More about Me</h3>
                 <p class="card-text">
                     Final Project Link:
-                    <a href = "https://derekhuggens.github.io/Final-Project/">Final Project</a><br><br>
+                    <a href = "https://derekhuggens.github.io/Final-Project/">Final Project</a><br>
                     I am proficient in C and Python, relational and non-relational databases, and source control. Primarily, I have setup data pipelines using PostgreSQL, 
                     SQLite, and MongoDB with Python SQLAlchemy/psycopg2, Flask, and Node/Express. I enjoy working with the Python library, Beautiful Soup, for HTML extraction and Splinter for automating browsers.
                     I have experience interacting with APIs for gathering weather data as well as creating Google Map interactions. For visualizations, I can use JS/D3/Leaflet, matplotlib/seaborn and have spent time making dashboards and stories in Tableau.
@@ -146,7 +146,7 @@
     <section class="container">
         <div class="card custom-card2">
             <p class="card-text">
-                <a href="https://docs.google.com/document/d/1nnZom17IdPe65LkQ4NSbu6mw2btD6kin/edit?usp=sharing&ouid=111623857121481951666&rtpof=true&sd=true">Resume</a>
+                <a href="https://drive.google.com/file/d/1BZTC29G3L1Arwo-QFr_49XvqBTZLx1b8/view?usp=sharing">Resume</a>
             </p>
         </div>
     </section>
