--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
     <header>
         <div class="wave">
             <div class="container header-container">
-                <h1 class="name"><bold>Derek Huggens</bold></h1>
+                <br>
+                <h1 class="name"><bold>Derek Huggens</bold></h1><br>
                 <h3 class="subtitle text-center"><i>Data Engineer</i></h3>
-                <h3 class="subtitle text-center">Learning, Experiencing, Engaging, and Teaching.</h3>
-                <!-- <img src="assets/images/student.png" class="boy" alt="boy image" /> -->
+                <h3 class="subtitle text-center">Learning, Experiencing, Engaging, and Teaching.</h3><br>
+            </div><br>
+
+            <div class="headshot">
+            <img src="https://media-exp1.licdn.com/dms/image/C5603AQFxcRacPBDGeQ/profile-displayphoto-shrink_800_800/0/1610918192493?e=1657152000&v=beta&t=uyyYUFXtDoPXIX_lnu8AyUCWK8HYAOxf0vbXv84ZykA" alt="Me" width="350" height="350">
             </div>
         </div>
         <div class="wave-svg">
@@ -125,17 +129,23 @@
 
                 <h3 class="card-title">More about Me</h3>
                 <p class="card-text">
-                    Final Project Link:
-                    <a href = "https://derekhuggens.github.io/Final-Project/">Final Project</a><br><br>
+                    
+                    <a href = "https://github.com/derekhuggens">GitHub Repository</a><br>
+                    <a href = "https://public.tableau.com/app/profile/derek.huggens">Tableau Portfolio</a><br>
+                    <a href = "https://derekhuggens.github.io/Final-Project/">Coding Bootcamp Final Project</a><br><br>
+
                     I am proficient in C and Python, relational and non-relational databases, and source control. Primarily, I have setup data pipelines using PostgreSQL, 
                     SQLite, and MongoDB with Python SQLAlchemy/psycopg2, Flask, and Node/Express. I enjoy working with the Python library, Beautiful Soup, for HTML extraction and Splinter for automating browsers.
-                    I have experience interacting with APIs for gathering weather data as well as creating Google Map interactions. For visualizations, I can use JS/D3/Leaflet, matplotlib/seaborn and have spent time making dashboards and stories in Tableau.
+                    I have experience interacting with APIs for gathering weather data as well as creating Google Map interactions. For visualizations, I can use JavaScript/D3/Leaflet, matplotlib/seaborn and have spent time making dashboards and stories in Tableau.
                     For BigData, I can perform ETL methods with pandas and PySpark. Finally, I have experience with supervised/unsupervised ML using varying algorithms and ensemble learning techniques with Tensorflow/Keras.</p>
                 <h5 class="card-title">
                     Technologies I use:
                 </h5>
                 <p class="card-text">
                     Visual Studio/Code, JupyterLab/Notebook, GitBash, PostgreSQL, R-Studio, Alteryx, PowerBI, Docker
+                </p><br>
+                <p class="card-text">
+                    <blockquote class="badgr-badge" style="font-family: Helvetica, Roboto, &quot;Segoe UI&quot;, Calibri, sans-serif;"><a href="https://api.badgr.io/public/assertions/BDo-xNflRICPAMayUlTglw?identity__email=derekhuggens%40knights.ucf.edu"><img width="120px" height="120px" src="https://api.badgr.io/public/assertions/BDo-xNflRICPAMayUlTglw/image"></a><p class="badgr-badge-name" style="hyphens: auto; overflow-wrap: break-word; word-wrap: break-word; margin: 0; font-size: 16px; font-weight: 600; font-style: normal; font-stretch: normal; line-height: 1.25; letter-spacing: normal; text-align: left; color: #05012c;">UCF Data Boot Camp (Data Analytics &amp; Visualization)</p><p class="badgr-badge-date" style="margin: 0; font-size: 12px; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #555555;"><strong style="font-size: 12px; font-weight: bold; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #000;">Awarded: </strong>May 3, 2022</p><p class="badgr-badge-recipient" style="margin: 0; font-size: 12px; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #555555;"><strong style="font-size: 12px; font-weight: bold; font-style: normal; font-stretch: normal; line-height: 1.67; letter-spacing: normal; text-align: left; color: #000;">Awarded To: </strong><span style="display: block;"> Derek Huggens</span></p><p style="margin: 16px 0; padding: 0;"><a class="badgr-badge-verify" target="_blank" href="https://badgecheck.io?url=https%3A%2F%2Fapi.badgr.io%2Fpublic%2Fassertions%2FBDo-xNflRICPAMayUlTglw%3Fidentity__email%3Dderekhuggens%2540knights.ucf.edu&amp;identity__email=derekhuggens%40knights.ucf.edu" style="box-sizing: content-box; display: flex; align-items: center; justify-content: center; margin: 0; font-size:14px; font-weight: bold; width: 48px; height: 16px; border-radius: 4px; border: solid 1px black; text-decoration: none; padding: 6px 16px; margin: 16px 0; color: black;">VERIFY</a></p><script async="async" src="https://badgr.com/assets/widgets.bundle.js"></script></blockquote>
                 </p>
             </div>
         </div>
@@ -146,7 +156,7 @@
     <section class="container">
         <div class="card custom-card2">
             <p class="card-text">
-                <a href="https://drive.google.com/file/d/1BZTC29G3L1Arwo-QFr_49XvqBTZLx1b8/view?usp=sharing">Resume</a>
+                <a href="https://docs.google.com/document/d/17GpBGwZlOprdLywh4Qa88FPlTuADwczP/edit?usp=sharing&ouid=111623857121481951666&rtpof=true&sd=true">Resume</a>
             </p>
         </div>
     </section>
