--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 <body>
 
     <header>
+
+        <div>
+            <ul>
+                <li><a href="https://derekhuggens.github.io/Portfolio_Website/">Home</a></li>
+                <li><a href="https://medium.com/@derekhuggens">Blog</a></li>
+            </ul>
+
+        </div>
         <div class="wave">
             <div class="container header-container">
                 <br>
