--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     
                     <a href = "https://github.com/derekhuggens">GitHub Repository</a><br>
                     <a href = "https://public.tableau.com/app/profile/derek.huggens">Tableau Portfolio</a><br>
-                    <a href = "https://derekhuggens.github.io/Final-Project/">Coding Bootcamp Final Project</a><br><br>
+                    <a href = "https://derekhuggens.github.io/Vehicle-Insurance-Fraud-Analysis-Webpage-Dashboard-with-Front-and-Backend/">Coding Bootcamp Final Project</a><br><br>
 
                     I am proficient in C and Python, relational and non-relational databases, and source control. Primarily, I have setup data pipelines using PostgreSQL, 
                     SQLite, and MongoDB with Python SQLAlchemy/psycopg2, Flask, and Node/Express. I enjoy working with the Python library, Beautiful Soup, for HTML extraction and Splinter for automating browsers.
